fix z-index

--- a/assets/css/layouts.scss
+++ b/assets/css/layouts.scss
@@ -404,7 +404,7 @@ form.default label:has(.oc--switch) {
         background: white;
         border: 1px solid #ccc;
         box-shadow: 0 4px 6px rgb(0 0 0 / 0.1);
-        z-index: 10;
+        z-index: 20;
         border-radius: 0.25rem;
         min-width: 270px;
         display: flex;
